dons_tests/valid_kxi/scope_function.kxi
class MyClass { 
    public void myfunc() {
        int x = 4;
        x = 5;
    }
}
void main(){}
