dons_tests/invalid_kxi/scope_bad.kxi
class MyClass { 
    public void myfunc(int x) {
        return j + 1;
    }
}
void main(){
    int j = 4;
}
